# query-builder

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/: filtering_benchmarks.py
src/: tmp_main.py
src/query_builder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/query_builder/filtering/: __init__.py  configurations.py  errors.py
src/query_builder/filtering/models/: __init__.py  conditions.py  operators.py  rules.py
src/query_builder/shared/models/: __init__.py
src/query_builder/sorting/: __init__.py  configurations.py  errors.py
src/query_builder/sorting/models/: __init__.py  directions.py  rules.py
src/treds_query_builder/: __init__.py  filtering.py  parsing.py  sorting.py
src/treds_query_builder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/treds_query_builder/filtering/: __init__.py  configurations.py  errors.py
src/treds_query_builder/filtering/models/: __init__.py  conditions.py  operators.py  rules.py
src/treds_query_builder/models/: conditions.py  filtering.py  operators.py
tests/test_query_builder/: test_filtering.py  test_sorting.py
tests/test_treds_query_builder/: test_filtering.py  test_parsing.py  test_sorting.py
